# EasilyAI

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  setup.py
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  docsdeploy.yml  publish.yml  python-publish.yml
docs/: anthropic.md  api.md  appcreation.md  configuration.md  customai.md  errorhandling.md  examples.md  gemini.md  grok.md  guide.md  huggingface.md  imagegeneration.md  index.md  installation.md  ollama.md  openai.md  overview.md  package-lock.json  performance.md  pipelines.md  quickstart.md  services.md  textgeneration.md  texttospeech.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: ApiTable.vue  CodeComparison.vue  FeatureCard.vue  InstallationSteps.vue
docs/api/: customai.md  pipelines.md  services.md
easilyai/: __init__.py  app.py  batch.py  cache.py  config.py  cost_tracking.py  enhanced_app.py  enhanced_pipeline.py  metrics.py  pipeline.py  rate_limit.py  utils.py
easilyai/services/: anthropic_service.py  gemini_service.py  grok_service.py  huggingface_service.py  ollama_service.py  openai_service.py
easilyai/utils/: logging.py  retry.py
easyai/: __init__.py  app.py  exceptions.py  pipeline.py
examples/: basic_example.py  enhanced_features_demo.py
tests/: conftest.py  test_anthropic_service.py  test_app.py  test_batch.py  test_custom_ai.py  test_enhanced_app.py  test_enhanced_pipeline.py  test_exceptions.py  test_grok_service.py  test_huggingface_service.py  test_openai_service.py  test_pipeline.py  test_services.py  test_utils.py
